--- a/style.css
+++ b/style.css
@@ -82,32 +82,42 @@ main {
      height: 200px;
      grid-template-columns: 100px 200px 100px; /* Adjust the widths of columns as needed */
      grid-gap: 10px; /* Adjust the gap between grid items */
+     background-image: url("wp8529160.png");
      
 
 }
 .row1{
     display: flex;
     border: 2px solid black;
+    background-color: white;
 
 }
 .row2{
     display: flex;
     border: 2px solid black;
+    background-color: white;
+
 
 }
 .row3{
     display: flex;
     border: 2px solid black;
+    background-color: white;
+
 
 }
 .row4{
     display: flex;
     border: 2px solid black;
+    background-color: white;
+
 
 }
 .row5{
     display: flex;
     border: 2px solid black;
+    background-color: white;
+
 
 }
  
